# datasci112_finalproject

./: .gitignore  README.md  explore_csv.ipynb  main.py  map_builder.py  sites.py  todo.md
data/: LA_County_Homeless_Encampment_Request_Forms.csv
scrape_attempt/: pyproject.toml  scrape.py
